--- a/shared/mock/db/job-applications.json
+++ b/shared/mock/db/job-applications.json
@@ -7,23 +7,19 @@
     "url": "https://techcorp.com/careers/senior-frontend",
     "description": "Looking for an experienced frontend developer to join our team...",
     "salaryRange": "$120,000 - $150,000",
-    "applicationDeadline": "2024-12-15T00:00:00.000Z",
+    "applicationDeadline": "2025-09-20T00:00:00.000Z",
     "stage": "interview",
-    "dateAdded": "2024-11-01T00:00:00.000Z",
+    "dateAdded": "2025-09-01T00:00:00.000Z",
     "notes": [
       {
         "id": "n1",
         "content": "Great company culture, strong engineering team",
-        "timestamp": "2024-11-01T00:00:00.000Z",
+        "timestamp": "2025-09-01T00:00:00.000Z",
         "type": "research"
       }
     ],
     "communications": [],
-    "tags": [
-      "frontend",
-      "react",
-      "typescript"
-    ],
+    "tags": ["frontend", "react", "typescript"],
     "priority": "high",
     "source": "LinkedIn",
     "stageHistory": [
@@ -31,14 +27,14 @@
         "id": "st1",
         "fromStage": null,
         "toStage": "researched",
-        "timestamp": "2024-11-01T00:00:00.000Z",
+        "timestamp": "2025-09-01T00:00:00.000Z",
         "notes": "Found this position on LinkedIn"
       },
       {
         "id": "st2",
         "fromStage": "researched",
         "toStage": "applied",
-        "timestamp": "2024-11-03T00:00:00.000Z",
+        "timestamp": "2025-09-03T00:00:00.000Z",
         "notes": "Submitted application through company website"
       },
       {
@@ -58,15 +54,449 @@
     "url": "https://startupxyz.com/jobs/fullstack",
     "salaryRange": "$90,000 - $120,000",
     "stage": "phone_screen",
-    "dateAdded": "2024-10-28T00:00:00.000Z",
+    "dateAdded": "2025-09-05T00:00:00.000Z",
     "notes": [],
     "communications": [],
-    "tags": [
-      "fullstack",
-      "node",
-      "react"
-    ],
+    "tags": ["fullstack", "node", "react"],
     "priority": "medium",
-    "source": "Company Website"
+    "source": "Company Website",
+    "stageHistory": [
+      {
+        "id": "st3",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-05T00:00:00.000Z"
+      },
+      {
+        "id": "st4",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-09-07T00:00:00.000Z"
+      },
+      {
+        "id": "st5",
+        "fromStage": "applied",
+        "toStage": "phone_screen",
+        "timestamp": "2025-09-09T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "3",
+    "title": "Backend Developer",
+    "company": "DataFlow Systems",
+    "location": "Austin, TX",
+    "url": "https://dataflow.com/careers/backend-dev",
+    "description": "Join our backend team to build scalable microservices...",
+    "salaryRange": "$100,000 - $130,000",
+    "stage": "researched",
+    "dateAdded": "2025-09-08T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n2",
+        "content": "Interesting tech stack - Go, Kubernetes, PostgreSQL",
+        "timestamp": "2025-09-08T00:00:00.000Z",
+        "type": "research"
+      }
+    ],
+    "communications": [],
+    "tags": ["backend", "go", "kubernetes", "microservices"],
+    "priority": "medium",
+    "source": "AngelList",
+    "stageHistory": [
+      {
+        "id": "st6",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-08T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "4",
+    "title": "DevOps Engineer",
+    "company": "CloudNative Co.",
+    "location": "Seattle, WA",
+    "url": "https://cloudnative.com/jobs/devops",
+    "salaryRange": "$110,000 - $140,000",
+    "stage": "researched",
+    "dateAdded": "2025-09-06T00:00:00.000Z",
+    "notes": [],
+    "communications": [],
+    "tags": ["devops", "aws", "terraform", "docker"],
+    "priority": "low",
+    "source": "Indeed",
+    "stageHistory": [
+      {
+        "id": "st7",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-06T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "5",
+    "title": "Product Manager",
+    "company": "InnovateTech",
+    "location": "New York, NY",
+    "url": "https://innovatetech.com/careers/pm",
+    "salaryRange": "$130,000 - $160,000",
+    "stage": "applied",
+    "dateAdded": "2025-09-04T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n3",
+        "content": "Strong product culture, B2B SaaS focus",
+        "timestamp": "2025-09-04T00:00:00.000Z",
+        "type": "research"
+      }
+    ],
+    "communications": [],
+    "tags": ["product", "saas", "b2b"],
+    "priority": "high",
+    "source": "Company Website",
+    "stageHistory": [
+      {
+        "id": "st8",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-04T00:00:00.000Z"
+      },
+      {
+        "id": "st9",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-09-06T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "6",
+    "title": "Senior Software Engineer",
+    "company": "MegaCorp",
+    "location": "Mountain View, CA",
+    "url": "https://megacorp.com/jobs/senior-swe",
+    "salaryRange": "$150,000 - $200,000",
+    "stage": "applied",
+    "dateAdded": "2025-10-20T00:00:00.000Z",
+    "notes": [],
+    "communications": [],
+    "tags": ["backend", "java", "distributed-systems"],
+    "priority": "high",
+    "source": "Referral",
+    "stageHistory": [
+      {
+        "id": "st10",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-10-20T00:00:00.000Z"
+      },
+      {
+        "id": "st11",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-10-22T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "7",
+    "title": "Frontend Engineer",
+    "company": "DesignFirst",
+    "location": "Los Angeles, CA",
+    "url": "https://designfirst.com/careers/frontend",
+    "salaryRange": "$95,000 - $125,000",
+    "stage": "final",
+    "dateAdded": "2025-10-15T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n4",
+        "content": "Final round scheduled for next week",
+        "timestamp": "2025-11-12T00:00:00.000Z",
+        "type": "interview"
+      }
+    ],
+    "communications": [
+      {
+        "id": "c1",
+        "type": "email",
+        "direction": "inbound",
+        "subject": "Final Interview Invitation",
+        "content": "We'd like to invite you for the final round...",
+        "timestamp": "2025-11-12T00:00:00.000Z",
+        "contactPerson": "Sarah Johnson"
+      }
+    ],
+    "tags": ["frontend", "vue", "design-systems"],
+    "priority": "high",
+    "source": "LinkedIn",
+    "stageHistory": [
+      {
+        "id": "st12",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-10-15T00:00:00.000Z"
+      },
+      {
+        "id": "st13",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-10-17T00:00:00.000Z"
+      },
+      {
+        "id": "st14",
+        "fromStage": "applied",
+        "toStage": "phone_screen",
+        "timestamp": "2025-10-25T00:00:00.000Z"
+      },
+      {
+        "id": "st15",
+        "fromStage": "phone_screen",
+        "toStage": "interview",
+        "timestamp": "2025-11-02T00:00:00.000Z"
+      },
+      {
+        "id": "st16",
+        "fromStage": "interview",
+        "toStage": "final",
+        "timestamp": "2025-11-10T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "8",
+    "title": "Data Scientist",
+    "company": "AI Innovations",
+    "location": "Boston, MA",
+    "url": "https://aiinnovations.com/jobs/data-scientist",
+    "salaryRange": "$120,000 - $150,000",
+    "stage": "offer",
+    "dateAdded": "2025-09-30T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n5",
+        "content": "Received offer! Need to respond by Friday",
+        "timestamp": "2025-11-13T00:00:00.000Z",
+        "type": "general"
+      }
+    ],
+    "communications": [
+      {
+        "id": "c2",
+        "type": "email",
+        "direction": "inbound",
+        "subject": "Job Offer - Data Scientist Position",
+        "content": "We're excited to extend an offer...",
+        "timestamp": "2025-11-13T00:00:00.000Z",
+        "contactPerson": "Mike Chen"
+      }
+    ],
+    "tags": ["data-science", "python", "machine-learning"],
+    "priority": "high",
+    "source": "Glassdoor",
+    "stageHistory": [
+      {
+        "id": "st17",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-30T00:00:00.000Z"
+      },
+      {
+        "id": "st18",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-10-02T00:00:00.000Z"
+      },
+      {
+        "id": "st19",
+        "fromStage": "applied",
+        "toStage": "phone_screen",
+        "timestamp": "2025-10-10T00:00:00.000Z"
+      },
+      {
+        "id": "st20",
+        "fromStage": "phone_screen",
+        "toStage": "interview",
+        "timestamp": "2025-10-20T00:00:00.000Z"
+      },
+      {
+        "id": "st21",
+        "fromStage": "interview",
+        "toStage": "final",
+        "timestamp": "2025-11-05T00:00:00.000Z"
+      },
+      {
+        "id": "st22",
+        "fromStage": "final",
+        "toStage": "offer",
+        "timestamp": "2025-11-13T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "9",
+    "title": "Mobile Developer",
+    "company": "AppWorks",
+    "location": "Chicago, IL",
+    "url": "https://appworks.com/careers/mobile",
+    "salaryRange": "$85,000 - $115,000",
+    "stage": "rejected",
+    "dateAdded": "2025-10-01T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n6",
+        "content": "Feedback: Need more React Native experience",
+        "timestamp": "2025-11-01T00:00:00.000Z",
+        "type": "interview"
+      }
+    ],
+    "communications": [
+      {
+        "id": "c3",
+        "type": "email",
+        "direction": "inbound",
+        "subject": "Application Update",
+        "content": "Thank you for your interest. Unfortunately...",
+        "timestamp": "2025-11-01T00:00:00.000Z",
+        "contactPerson": "HR Team"
+      }
+    ],
+    "tags": ["mobile", "react-native", "ios", "android"],
+    "priority": "medium",
+    "source": "Stack Overflow Jobs",
+    "stageHistory": [
+      {
+        "id": "st23",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-10-01T00:00:00.000Z"
+      },
+      {
+        "id": "st24",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-10-03T00:00:00.000Z"
+      },
+      {
+        "id": "st25",
+        "fromStage": "applied",
+        "toStage": "phone_screen",
+        "timestamp": "2025-10-15T00:00:00.000Z"
+      },
+      {
+        "id": "st26",
+        "fromStage": "phone_screen",
+        "toStage": "interview",
+        "timestamp": "2025-10-25T00:00:00.000Z"
+      },
+      {
+        "id": "st27",
+        "fromStage": "interview",
+        "toStage": "rejected",
+        "timestamp": "2025-11-01T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "10",
+    "title": "QA Engineer",
+    "company": "TestPro Solutions",
+    "location": "Denver, CO",
+    "url": "https://testpro.com/jobs/qa-engineer",
+    "salaryRange": "$75,000 - $95,000",
+    "stage": "withdrawn",
+    "dateAdded": "2025-09-15T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n7",
+        "content": "Decided to focus on development roles instead",
+        "timestamp": "2025-10-20T00:00:00.000Z",
+        "type": "general"
+      }
+    ],
+    "communications": [],
+    "tags": ["qa", "testing", "automation"],
+    "priority": "low",
+    "source": "Company Website",
+    "stageHistory": [
+      {
+        "id": "st28",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-09-15T00:00:00.000Z"
+      },
+      {
+        "id": "st29",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-09-18T00:00:00.000Z"
+      },
+      {
+        "id": "st30",
+        "fromStage": "applied",
+        "toStage": "withdrawn",
+        "timestamp": "2025-10-20T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "11",
+    "title": "UI/UX Designer",
+    "company": "Creative Studio",
+    "location": "Portland, OR",
+    "url": "https://creativestudio.com/careers/ux-designer",
+    "salaryRange": "$80,000 - $110,000",
+    "stage": "researched",
+    "dateAdded": "2025-11-12T00:00:00.000Z",
+    "notes": [
+      {
+        "id": "n8",
+        "content": "Portfolio review required, need to update case studies",
+        "timestamp": "2025-11-12T00:00:00.000Z",
+        "type": "research"
+      }
+    ],
+    "communications": [],
+    "tags": ["design", "ux", "ui", "figma"],
+    "priority": "medium",
+    "source": "Dribbble",
+    "stageHistory": [
+      {
+        "id": "st31",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-11-12T00:00:00.000Z"
+      }
+    ]
+  },
+  {
+    "id": "12",
+    "title": "Technical Writer",
+    "company": "DocuTech",
+    "location": "Remote",
+    "url": "https://docutech.com/jobs/technical-writer",
+    "salaryRange": "$70,000 - $90,000",
+    "stage": "applied",
+    "dateAdded": "2025-11-05T00:00:00.000Z",
+    "notes": [],
+    "communications": [],
+    "tags": ["technical-writing", "documentation", "api-docs"],
+    "priority": "low",
+    "source": "Remote.co",
+    "stageHistory": [
+      {
+        "id": "st32",
+        "fromStage": null,
+        "toStage": "researched",
+        "timestamp": "2025-11-05T00:00:00.000Z"
+      },
+      {
+        "id": "st33",
+        "fromStage": "researched",
+        "toStage": "applied",
+        "timestamp": "2025-11-07T00:00:00.000Z"
+      }
+    ]
   }
 ]
