--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "@formkit/drag-and-drop": "^0.5.3",
     "@iconify-json/lucide": "^1.2.64",
     "@iconify-json/simple-icons": "^1.2.49",
     "@nuxt/ui": "^4.0.0-alpha.1",
@@ -22,6 +23,7 @@
     "date-fns": "^4.1.0",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
+    "vue-easy-dnd": "^2.2.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
